[gd_scene load_steps=23 format=3 uid="uid://ds8n7330vwr4l"]

[ext_resource type="Script" uid="uid://dkypki612pnwx" path="res://Scripts/slime_boss.gd" id="1_oq4ak"]
[ext_resource type="Texture2D" uid="uid://cafck3hon1bxh" path="res://Assets/SlimeBoss/idle-sheet.png" id="2_oq4ak"]
[ext_resource type="Texture2D" uid="uid://bmvyq7r2yp3po" path="res://Assets/SlimeBoss/sprite-sheet-full.png" id="3_i21p6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7c8ib"]
atlas = ExtResource("2_oq4ak")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i21p6"]
atlas = ExtResource("2_oq4ak")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fevyy"]
atlas = ExtResource("3_i21p6")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hibaj"]
atlas = ExtResource("3_i21p6")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdsj5"]
atlas = ExtResource("3_i21p6")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee4r6"]
atlas = ExtResource("3_i21p6")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt3je"]
atlas = ExtResource("3_i21p6")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pmx8"]
atlas = ExtResource("3_i21p6")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u50mg"]
atlas = ExtResource("3_i21p6")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbgmd"]
atlas = ExtResource("3_i21p6")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jyy6"]
atlas = ExtResource("3_i21p6")
region = Rect2(256, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueoa1"]
atlas = ExtResource("3_i21p6")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vcvc"]
atlas = ExtResource("3_i21p6")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k868"]
atlas = ExtResource("3_i21p6")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpc6h"]
atlas = ExtResource("3_i21p6")
region = Rect2(384, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq4ak"]
atlas = ExtResource("3_i21p6")
region = Rect2(416, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_h1bgf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c8ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i21p6")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fevyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hibaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdsj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee4r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt3je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pmx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u50mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbgmd")
}],
"loop": true,
"name": &"moving",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jyy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueoa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vcvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k868")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpc6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq4ak")
}],
"loop": false,
"name": &"stuned",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oq4ak"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7c8ib"]
resource_local_to_scene = true
radius = 25.0

[node name="SlimeBoss" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_oq4ak")
jump_frame_to_hitbox_area = null
movement_speed = null
max_hp = null
poison_stacks = null
current_hp = null

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_h1bgf")
animation = &"moving"
autoplay = "idle"
offset = Vector2(0, -19)
metadata/_edit_lock_ = true

[node name="StatusTimer" type="Timer" parent="."]
autostart = true

[node name="AttackHitbox" type="Area2D" parent="."]
collision_mask = 32
monitoring = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_oq4ak")
metadata/_edit_lock_ = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_7c8ib")
metadata/_edit_lock_ = true
